force-app/main/default/objects/Speaker__c/fields/HCP_ID_number__c.field-meta.xml
<CustomField>
    <fullName>HCP_ID_number__c</fullName>
    <label>HCP ID number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>