force-app/main/default/objects/Speaker__c/fields/Professional_type__c.field-meta.xml
<CustomField>
    <fullName>Professional_type__c</fullName>
    <label>Professional type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nutritionist</fullName>
            </value>
            <value>
                <fullName>Psychologist</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Athlete</fullName>
            </value>
            <value>
                <fullName>influencer</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Physical educator</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Physiotherapist</fullName>
            </value>
            <value>
                <fullName>dentist</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>